fix: scroll dropdown options when too long in modal (#566)

--- a/web/css/dropdown.css
+++ b/web/css/dropdown.css
@@ -245,9 +245,11 @@
   background: var(--noora-surface-background-primary);
   padding: var(--noora-spacing-2);
   width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
 
   &[data-state="open"] {
-    display: flex;
+    display: initial;
   }
 }
 
